Добавление оверлей и модельного окна

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="overlya">
                 <div class="container">
                     <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                    <button type="button" class="hero-button">Order Service</button>
+                    <button data-modal-open type="button" class="hero-button">Order Service</button>
                 </div>
             </div>
         </section>
@@ -381,6 +381,13 @@
         </div>
     </footer>
 
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button data-modal-close>Close
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
