--- a/portfolio.html
+++ b/portfolio.html
@@ -61,17 +61,22 @@
             <ul class="examples-list list">
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/banking-app.jpg" width="360" height="300" alt="banking App">
+                        <div class="examples-thumb">
+                            <img src="./images/banking-app.jpg" width="360" height="300" alt="banking App">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Banking App Interface Concept</h2>
                             <p class="examples-text">App</p>
+
                         </div>
                     </a>
                 </li>
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/cashless-payment-marketing.jpg" width="360" height="300"
-                            alt="cashless Payment">
+                        <div class="examples-thumb">
+                            <img src="./images/cashless-payment-marketing.jpg" width="360" height="300"
+                                alt="cashless Payment">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Cashless Payment</h2>
                             <p class="examples-text">Marketing</p>
@@ -80,7 +85,9 @@
                 </li>
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/meditaion-app.jpg" width="360" height="300" alt="Meditaion App">
+                        <div class="examples-thumb">
+                            <img src="./images/meditaion-app.jpg" width="360" height="300" alt="Meditaion App">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Meditaion App</h2>
                             <p class="examples-text">App</p>
@@ -89,7 +96,9 @@
                 </li>
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/taxi-service-marketing.jpg" width="360" height="300" alt="Taxi Service">
+                        <div class="examples-thumb">
+                            <img src="./images/taxi-service-marketing.jpg" width="360" height="300" alt="Taxi Service">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Taxi Service</h2>
                             <p class="examples-text">Marketing</p>
@@ -98,8 +107,10 @@
                 </li>
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/screen-illustrations-design.jpg" width="360" height="300"
-                            alt="Screen Illustrations">
+                        <div class="examples-thumb">
+                            <img src="./images/screen-illustrations-design.jpg" width="360" height="300"
+                                alt="Screen Illustrations">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Screen Illustrations</h2>
                             <p class="examples-text">Design</p>
@@ -108,7 +119,10 @@
                 </li>
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/online-courses-narketing.jpg" width="360" height="300" alt="Online Courses">
+                        <div class="examples-thumb">
+                            <img src="./images/online-courses-narketing.jpg" width="360" height="300"
+                                alt="Online Courses">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Online Courses</h2>
                             <p class="examples-text">Marketing</p>
@@ -117,8 +131,10 @@
                 </li>
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/instagram-stories-design.jpg" width="360" height="300"
-                            alt="Instagram Stories Concept">
+                        <div class="examples-thumb">
+                            <img src="./images/instagram-stories-design.jpg" width="360" height="300"
+                                alt="Instagram Stories Concept">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Instagram Stories Concept</h2>
                             <p class="examples-text">Design</p>
@@ -127,7 +143,9 @@
                 </li>
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/organic-food-web-site.jpg" width="360" height="300" alt="Organic Food">
+                        <div class="examples-thumb">
+                            <img src="./images/organic-food-web-site.jpg" width="360" height="300" alt="Organic Food">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Organic Food</h2>
                             <p class="examples-text">Web Site</p>
@@ -136,7 +154,9 @@
                 </li>
                 <li class="item">
                     <a class="examples-link" href="">
-                        <img src="./images/fresh-coffee-web-site.jpg" width="360" height="300" alt="Fresh Coffee">
+                        <div class="examples-thumb">
+                            <img src="./images/fresh-coffee-web-site.jpg" width="360" height="300" alt="Fresh Coffee">
+                        </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Fresh Coffee</h2>
                             <p class="examples-text">Web Site</p>
