--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button data-modal-close>Close
+            <button class="btn" data-modal-close>x
             </button>
         </div>
     </div>
