--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="./index.html" class="logo"> web<span class="logo-studio">studio</span>
                 </a>
                 <ul class="navigation-list list">
-                    <li class="item"><a href="./index.html" class="navigation-link">Studio</a></li>
+                    <li class="item"><a href="./index.html" class="navigation-link active">Studio</a></li>
                     <li class="item"><a href="./portfolio.html" class="navigation-link">Portfolio</a></li>
                     <li class="item"><a href="" class="navigation-link">Contacts</a></li>
                 </ul>
@@ -383,7 +383,10 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="btn" data-modal-close>x
+            <button class="btn" data-modal-close>
+                <svg width="8px" height="8px">
+                    <use href="./images/split.svg#close"></use>
+                </svg>
             </button>
         </div>
     </div>
