--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                 </a>
                 <ul class="navigation-list list">
                     <li class="item"><a href="./index.html" class="navigation-link">Studio</a></li>
-                    <li class="item"><a href="./portfolio.html" class="navigation-link">Portfolio</a></li>
+                    <li class="item"><a href="./portfolio.html" class="navigation-link active">Portfolio</a></li>
                     <li class="item"><a href="" class="navigation-link">Contacts</a></li>
                 </ul>
             </nav>
@@ -63,6 +63,11 @@
                     <a class="examples-link" href="">
                         <div class="examples-thumb">
                             <img src="./images/banking-app.jpg" width="360" height="300" alt="banking App">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Banking App Interface Concept</h2>
@@ -75,6 +80,11 @@
                         <div class="examples-thumb">
                             <img src="./images/cashless-payment-marketing.jpg" width="360" height="300"
                                 alt="cashless Payment">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Cashless Payment</h2>
@@ -86,6 +96,11 @@
                     <a class="examples-link" href="">
                         <div class="examples-thumb">
                             <img src="./images/meditaion-app.jpg" width="360" height="300" alt="Meditaion App">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Meditaion App</h2>
@@ -97,6 +112,11 @@
                     <a class="examples-link" href="">
                         <div class="examples-thumb">
                             <img src="./images/taxi-service-marketing.jpg" width="360" height="300" alt="Taxi Service">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Taxi Service</h2>
@@ -109,6 +129,11 @@
                         <div class="examples-thumb">
                             <img src="./images/screen-illustrations-design.jpg" width="360" height="300"
                                 alt="Screen Illustrations">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Screen Illustrations</h2>
@@ -121,6 +146,11 @@
                         <div class="examples-thumb">
                             <img src="./images/online-courses-narketing.jpg" width="360" height="300"
                                 alt="Online Courses">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Online Courses</h2>
@@ -133,6 +163,11 @@
                         <div class="examples-thumb">
                             <img src="./images/instagram-stories-design.jpg" width="360" height="300"
                                 alt="Instagram Stories Concept">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Instagram Stories Concept</h2>
@@ -144,6 +179,11 @@
                     <a class="examples-link" href="">
                         <div class="examples-thumb">
                             <img src="./images/organic-food-web-site.jpg" width="360" height="300" alt="Organic Food">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Organic Food</h2>
@@ -155,6 +195,11 @@
                     <a class="examples-link" href="">
                         <div class="examples-thumb">
                             <img src="./images/fresh-coffee-web-site.jpg" width="360" height="300" alt="Fresh Coffee">
+                            <p class="overlay-thumb">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="decoration-text">
                             <h2 class="examples-title">Fresh Coffee</h2>
